try fix n+1